--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-pandas
-numpy
-sentence-transformers
 chromadb
 transformers
 ipykernel
 chroma-migrate
 pyarrow
 faiss-cpu
+numpy>=1.26.0
+pandas>=2.2.0
+torch>=2.2.0
+sentence-transformers>=2.7.0
+rank-bm25>=0.2.2
+scikit-learn>=1.4.0
+tqdm>=4.66.0
+nltk>=3.9
